--- a/src/main/resources/fxml/EditCarView.fxml
+++ b/src/main/resources/fxml/EditCarView.fxml
@@ -33,16 +33,16 @@
 			<TextField fx:id="categoryTextField" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 			<Label text="%car-color-label" GridPane.columnIndex="3" GridPane.rowIndex="0" />
 			<TextField fx:id="colorTextField" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-			<Label text="%car-constructionYear-label" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+			<Label text="%car-construction-year-label" GridPane.columnIndex="4" GridPane.rowIndex="0" />
 			<TextField fx:id="constructionYearTextField" GridPane.columnIndex="4"
 				GridPane.rowIndex="1" />
-			<Label text="%car-drivenDistance-label" GridPane.columnIndex="5" GridPane.rowIndex="0" />
+			<Label text="%car-driven-distance-label" GridPane.columnIndex="5" GridPane.rowIndex="0" />
 			<TextField fx:id="drivenDistanceTextField" GridPane.columnIndex="5"
 				GridPane.rowIndex="1" />
-			<Label text="%car-gearBox-label" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+			<Label text="%car-gearbox-label" GridPane.columnIndex="0" GridPane.rowIndex="2" />
 			<fx:define>
-				<HashMap fx:id="gearboxBundle" manual="%car-gearBox-manual-label"
-					semiautomatic="%car-gearBox-semiAutomatic-label" automatic="%car-gearBox-automatic-label" />
+				<HashMap fx:id="gearboxBundle" manual="%car-gearbox-manual-label"
+                         semiautomatic="%car-gearbox-semi-automatic-label" automatic="%car-gearbox-automatic-label" />
 			</fx:define>
 			<ChoiceBox fx:id="gearBoxChoiceBox" GridPane.columnIndex="0" GridPane.rowIndex="3"
 				GridPane.columnSpan="2">
@@ -54,7 +54,7 @@
 					</FXCollections>
 				</items>
 			</ChoiceBox>
-			<Label text="%car-horsePower-label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+			<Label text="%car-horsepower-label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 			<TextField fx:id="horsePowerTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 			<Label text="%car-fuel-label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
 			<fx:define>
@@ -72,11 +72,11 @@
 					</FXCollections>
 				</items>
 			</ChoiceBox>
-			<Label text="%car-doorCount-label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+			<Label text="%car-door-count-label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
 			<TextField fx:id="doorCountTextField" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 			<Label text="%car-tires-label" GridPane.columnIndex="4" GridPane.rowIndex="2" />
 			<TextField fx:id="tiresTextField" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-			<Label text="%car-nextInspection-label" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+			<Label text="%car-next-inspection-label" GridPane.columnIndex="5" GridPane.rowIndex="2" />
 			<TextField fx:id="nextInspectionTextField" GridPane.columnIndex="5"
 				GridPane.rowIndex="3" />
 			<Label text="%car-vin-label" GridPane.columnIndex="0" GridPane.rowIndex="4" />
@@ -87,12 +87,12 @@
 			<Label text="%car-defects-label" GridPane.columnIndex="0" GridPane.rowIndex="8" />
 			<TextField fx:id="defectsTextField" GridPane.columnIndex="0" GridPane.rowIndex="9"
 				GridPane.columnSpan="6" />
-			<Label text="%car-licenceNumber-label" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+			<Label text="%car-licence-number-label" GridPane.columnIndex="0" GridPane.rowIndex="10" />
 			<TextField fx:id="licenceNumberTextField" GridPane.columnIndex="0"
 				GridPane.rowIndex="11" />
-			<Label text="%car-parkingLot-label" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+			<Label text="%car-parking-lot-label" GridPane.columnIndex="1" GridPane.rowIndex="10" />
 			<TextField fx:id="parkingLotTextField" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-			<Label text="%car-dailyRate-label" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+			<Label text="%car-daily-rate-label" GridPane.columnIndex="2" GridPane.rowIndex="10" />
 			<TextField fx:id="dailyRateTextField" GridPane.columnIndex="2" GridPane.rowIndex="11" />
 			<padding>
 				<Insets top="25" right="25" bottom="25" left="25" />
