--- a/src/main/resources/fxml/EditCarView.fxml
+++ b/src/main/resources/fxml/EditCarView.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.util.HashMap?>
-<BorderPane fx:id="rootPane" xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
 	xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.htwsaar.prog3.carrental.controller.EditCarViewController">
 	<top>
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<left>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Label fx:id="titleLabel" text="%car-edit-title-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+					<Label text="%car-edit-title-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 				</GridPane>
 			</left>
 			<padding>
@@ -103,10 +103,10 @@
 		<BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
 			<right>
 				<GridPane alignment="center" hgap="10" vgap="10">
-					<Button fx:id="cancelButton" mnemonicParsing="false"
+					<Button mnemonicParsing="false"
 						onAction="#handleCancelButtonClicked" text="%button-cancel-label" textAlignment="CENTER"
 						GridPane.columnIndex="0" GridPane.rowIndex="0" />
-					<Button fx:id="applyButton" mnemonicParsing="false" onAction="#handleApplyButtonClicked"
+					<Button mnemonicParsing="false" onAction="#handleApplyButtonClicked"
 						text="%button-apply-label" textAlignment="CENTER" GridPane.columnIndex="1"
 						GridPane.rowIndex="0" />
 				</GridPane>
