--- a/src/main/resources/fxml/RentalTableView.fxml
+++ b/src/main/resources/fxml/RentalTableView.fxml
@@ -90,11 +90,11 @@
 			</ComboBox>
 			<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
 					   promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-			<Button fx:id="buttonApplyCurrentFilter" mnemonicParsing="false"
+			<Button mnemonicParsing="false"
 				onAction="#handleApplyCurrentFilterButtonClicked" text="%button-search-label"
 				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
 				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-			<Button fx:id="buttonRemoveCurrentFilter" mnemonicParsing="false"
+			<Button mnemonicParsing="false"
 				onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-clear-filter-label"
 				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
 				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
@@ -124,11 +124,11 @@
 			<rowConstraints>
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
 			</rowConstraints>
-			<Button fx:id="buttonEditSelectedObject" mnemonicParsing="false"
+			<Button mnemonicParsing="false"
 				onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
 				GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 				GridPane.valignment="CENTER"/>
-			<Button fx:id="buttonDeleteSelectedObject" mnemonicParsing="false"
+			<Button mnemonicParsing="false"
 				onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
 				GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
 				GridPane.valignment="CENTER"/>
