--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -34,8 +34,9 @@
         <TextField fx:id="HouseNumberTextField" layoutX="314.0" layoutY="298.0"/>
         <TextField fx:id="FirstNameTextField" layoutX="314.0" layoutY="113.0"/>
         <Button fx:id="SearchForCustomerButton" layoutX="294.0" layoutY="39.0" mnemonicParsing="false"
-                text="Search"/>
-        <Button fx:id="ConfirmRentButton" layoutX="395.0" layoutY="413.0" mnemonicParsing="false" text="Book"/>
+                onAction="#handleSearchCustomerButtonClicked" text="Search"/>
+        <Button fx:id="ConfirmRentButton" layoutX="395.0" layoutY="413.0" mnemonicParsing="false"
+                onAction="#handleConfirmRentButtonClicked" text="Book"/>
         <TextField fx:id="EMailTextField" layoutX="51.0" layoutY="357.0"/>
         <Label layoutX="33.0" layoutY="87.0" text="Last name:"/>
         <Label layoutX="297.0" layoutY="87.0" text="First name:"/>
@@ -49,6 +50,7 @@
         <Label layoutX="50.0" layoutY="14.0" text="Driver License ID"/>
         <Label layoutX="299.0" layoutY="211.0" text="City:"/>
         <TextField fx:id="CityTextField" layoutX="314.0" layoutY="237.0"/>
-        <Button fx:id="CancelButton" layoutX="319.0" layoutY="413.0" mnemonicParsing="false" text="Cancel"/>
+        <Button fx:id="CancelButton" layoutX="319.0" layoutY="413.0" mnemonicParsing="false"
+                onAction="#handleCancelButtonClicked" text="Cancel"/>
     </Pane>
 </Pane>
