--- a/src/main/resources/fxml/CustomerTableView.fxml
+++ b/src/main/resources/fxml/CustomerTableView.fxml
@@ -108,7 +108,7 @@
 	</top>
 	<center>
 		<TableView fx:id="customerTableView" prefHeight="400.0" prefWidth="487.0"
-			BorderPane.alignment="CENTER" onKeyPressed="#handleKeyboardControl">
+			BorderPane.alignment="CENTER" onKeyPressed="#handleKeyEvent">
 			<columns>
 				<TableColumn fx:id="id" text="%customer-id-label" />
 				<TableColumn fx:id="firstName" text="%customer-first-name-label" />
