--- a/src/main/resources/fxml/EmployeeEditView.fxml
+++ b/src/main/resources/fxml/EmployeeEditView.fxml
@@ -21,7 +21,7 @@
 		</BorderPane>
 	</top>
 	<center>
-		<GridPane alignment="center" hgap="10" vgap="10">
+		<GridPane alignment="center" hgap="10" vgap="10" onKeyPressed="#handleKeyEvent">
 			<Label text="%employee-first-name-label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
 			<TextField fx:id="firstNameTextField" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 			<Label text="%employee-last-name-label" GridPane.columnIndex="1" GridPane.rowIndex="0" />
