--- a/src/main/resources/fxml/EmployeeTableView.fxml
+++ b/src/main/resources/fxml/EmployeeTableView.fxml
@@ -5,140 +5,125 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.util.HashMap?>
-<BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-	fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController">
-	<top>
-		<GridPane BorderPane.alignment="CENTER">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-			</rowConstraints>
-			<MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5"
-					 GridPane.rowIndex="0">
-				<padding>
-					<Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-				</padding>
-				<Menu text="%menubar-view-file">
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-cars"
-							  onAction="#handleCarMenuItemClicked"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-customers"
-							  onAction="#handleCustomerMenuItemClicked"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-employees"
-							  onAction="#handleEmployeeMenuItemClicked"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-rentals"
-							  onAction="#handleRentalMenuItemClicked"/>
-					<SeparatorMenuItem mnemonicParsing="false"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-close"
-							  onAction="#handleCloseMenuItemClicked"/>
-				</Menu>
-				<Menu text="%menubar-view-edit">
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-new"
-							  onAction="#handleNewButtonClicked"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-edit"
-							  onAction="#handleEditButtonClicked"/>
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-delete"
-							  onAction="#handleDeleteButtonClicked"/>
-				</Menu>
-				<Menu text="%menubar-view-help">
-					<MenuItem mnemonicParsing="false" text="%menubar-operation-about"
-							  onAction="#handleAboutMenuItemClicked"/>
-				</Menu>
-			</MenuBar>
-			<fx:define>
-				<HashMap fx:id="searchComboBoxFieldStrings" id="%employee-id-label"
-						 firstName="%employee-first-name-label" lastName="%employee-last-name-label"
-						 position="%employee-position-label"/>
-			</fx:define>
-			<ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
-					  promptText="%search-combobox-field-text" prefWidth="Infinity" GridPane.halignment="CENTER"
-					  GridPane.valignment="CENTER">
-				<items>
-					<FXCollections fx:factory="observableArrayList">
-						<fx:reference source="searchComboBoxFieldStrings.id"/>
-						<fx:reference source="searchComboBoxFieldStrings.firstName"/>
-						<fx:reference source="searchComboBoxFieldStrings.lastName"/>
-						<fx:reference source="searchComboBoxFieldStrings.position"/>
-					</FXCollections>
-				</items>
-			</ComboBox>
-			<fx:define>
-				<HashMap fx:id="searchComboBoxComparatorStrings" equals="%search-combobox-equals"
-						 like="%search-combobox-like"/>
-			</fx:define>
-			<ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1"
-					  GridPane.columnIndex="1" promptText="%search-combobox-comparator-text" prefWidth="Infinity"
-					  GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-				<items>
-					<FXCollections fx:factory="observableArrayList">
-						<fx:reference source="searchComboBoxComparatorStrings.equals"/>
-						<fx:reference source="searchComboBoxComparatorStrings.like"/>
-					</FXCollections>
-				</items>
-			</ComboBox>
-			<TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
-					   promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-			<Button mnemonicParsing="false"
-				onAction="#handleApplyCurrentFilterButtonClicked" text="%button-search-label"
-				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3" prefWidth="Infinity"
-				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-			<Button mnemonicParsing="false"
-				onAction="#handleRemoveCurrentFilterButtonClicked" text="%button-clear-filter-label"
-				textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4" prefWidth="Infinity"
-				GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
-		</GridPane>
-	</top>
-	<center>
-		<TableView fx:id="employeeTableView" prefHeight="400.0" prefWidth="487.0"
-			BorderPane.alignment="CENTER" onKeyPressed="#handleKeyEvent">
-			<columns>
-				<TableColumn fx:id="id" text="%employee-id-label" />
-				<TableColumn fx:id="firstName" text="%employee-first-name-label" />
-				<TableColumn fx:id="lastName" text="%employee-last-name-label" />
-				<TableColumn fx:id="position" text="%employee-position-label" />
-			</columns>
-			<contextMenu>
-                <ContextMenu fx:id="contextMenu">
+<BorderPane xmlns:fx="http://javafx.com/fxml"
+            fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController"
+            onKeyPressed="#handleKeyEvent">
+    <top>
+        <GridPane BorderPane.alignment="CENTER">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <MenuBar prefHeight="10.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="0">
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+                <Menu text="%menubar-view-file">
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-cars" onAction="#handleCarMenuItemClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-customers" onAction="#handleCustomerMenuItemClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-employees" onAction="#handleEmployeeMenuItemClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-rentals" onAction="#handleRentalMenuItemClicked"/>
+                    <SeparatorMenuItem mnemonicParsing="false"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
+                </Menu>
+                <Menu text="%menubar-view-edit">
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-new" onAction="#handleNewButtonClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-edit" onAction="#handleEditButtonClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-delete" onAction="#handleDeleteButtonClicked"/>
+                </Menu>
+                <Menu text="%menubar-view-help">
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
+                </Menu>
+            </MenuBar>
+            <fx:define>
+                <HashMap fx:id="searchComboBoxFieldStrings"
+                         id="%employee-id-label"
+                         firstName="%employee-first-name-label"
+                         lastName="%employee-last-name-label"
+                         position="%employee-position-label"/>
+            </fx:define>
+            <ComboBox fx:id="searchComboBoxField" GridPane.rowIndex="1" GridPane.columnIndex="0"
+                      promptText="%search-combobox-field-text" prefWidth="Infinity" GridPane.halignment="CENTER"
+                      GridPane.valignment="CENTER">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                        <fx:reference source="searchComboBoxFieldStrings.id"/>
+                        <fx:reference source="searchComboBoxFieldStrings.firstName"/>
+                        <fx:reference source="searchComboBoxFieldStrings.lastName"/>
+                        <fx:reference source="searchComboBoxFieldStrings.position"/>
+                    </FXCollections>
+                </items>
+            </ComboBox>
+            <fx:define>
+                <HashMap fx:id="searchComboBoxComparatorStrings"
+                         equals="%search-combobox-equals"
+                         like="%search-combobox-like"/>
+            </fx:define>
+            <ComboBox fx:id="searchComboBoxComparator" GridPane.rowIndex="1" GridPane.columnIndex="1"
+                      promptText="%search-combobox-comparator-text" prefWidth="Infinity" GridPane.halignment="CENTER"
+                      GridPane.valignment="CENTER">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                        <fx:reference source="searchComboBoxComparatorStrings.equals"/>
+                        <fx:reference source="searchComboBoxComparatorStrings.like"/>
+                    </FXCollections>
+                </items>
+            </ComboBox>
+            <TextField fx:id="searchTextField" GridPane.rowIndex="1" GridPane.columnIndex="2"
+                       promptText="%search-textfield-text" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+            <Button mnemonicParsing="false" onAction="#handleApplyCurrentFilterButtonClicked"
+                    text="%button-search-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="3"
+                    prefWidth="Infinity" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+            <Button mnemonicParsing="false" onAction="#handleRemoveCurrentFilterButtonClicked"
+                    text="%button-clear-filter-label" textAlignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="4"
+                    prefWidth="Infinity" GridPane.halignment="CENTER" GridPane.valignment="CENTER"/>
+        </GridPane>
+    </top>
+    <center>
+        <TableView fx:id="employeeTableView" prefHeight="400.0" prefWidth="487.0" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn fx:id="id" text="%employee-id-label"/>
+                <TableColumn fx:id="firstName" text="%employee-first-name-label"/>
+                <TableColumn fx:id="lastName" text="%employee-last-name-label"/>
+                <TableColumn fx:id="position" text="%employee-position-label"/>
+            </columns>
+            <contextMenu>
+                <ContextMenu>
                     <items>
-                        <MenuItem text="%button-new-label"
-                            onAction="#handleNewButtonClicked" />
-                        <MenuItem text="%button-edit-label"
-                            onAction="#handleEditButtonClicked" />
-                        <MenuItem text="%button-delete-label"
-                            onAction="#handleDeleteButtonClicked" />
+                        <MenuItem text="%button-new-label" onAction="#handleNewButtonClicked"/>
+                        <MenuItem text="%button-edit-label" onAction="#handleEditButtonClicked"/>
+                        <MenuItem text="%button-delete-label" onAction="#handleDeleteButtonClicked"/>
                     </items>
                 </ContextMenu>
             </contextMenu>
-		</TableView>
-	</center>
-	<bottom>
-		<GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
-				<ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-			</rowConstraints>
-			<Button mnemonicParsing="false"
-				onAction="#handleNewButtonClicked" text="%button-new-label" textAlignment="CENTER"
-				GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-				GridPane.valignment="CENTER"/>
-			<Button mnemonicParsing="false"
-					onAction="#handleEditButtonClicked" text="%button-edit-label" textAlignment="CENTER"
-					GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-					GridPane.valignment="CENTER"/>
-			<Button mnemonicParsing="false"
-				onAction="#handleDeleteButtonClicked" text="%button-delete-label" textAlignment="CENTER"
-				GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
-				GridPane.valignment="CENTER"/>
-		</GridPane>
-	</bottom>
+        </TableView>
+    </center>
+    <bottom>
+        <GridPane BorderPane.alignment="CENTER" prefHeight="25.0" prefWidth="1442.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <Button mnemonicParsing="false" onAction="#handleNewButtonClicked" text="%button-new-label"
+                    textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+                    GridPane.valignment="CENTER"/>
+            <Button mnemonicParsing="false" onAction="#handleEditButtonClicked" text="%button-edit-label"
+                    textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+                    GridPane.valignment="CENTER"/>
+            <Button mnemonicParsing="false" onAction="#handleDeleteButtonClicked" text="%button-delete-label"
+                    textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.halignment="CENTER"
+                    GridPane.valignment="CENTER"/>
+        </GridPane>
+    </bottom>
 </BorderPane>
