--- a/src/main/resources/fxml/CarEditView.fxml
+++ b/src/main/resources/fxml/CarEditView.fxml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.collections.FXCollections?>
-<?import javafx.geometry.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import java.util.HashMap?>
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.CarEditViewController"
-            onKeyPressed="#handleKeyEvent">
+<BorderPane onKeyPressed="#handleKeyEvent"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="de.htwsaar.prog3.carrental.controller.CarEditViewController">
     <top>
-        <BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
+        <BorderPane BorderPane.alignment="CENTER">
             <left>
                 <GridPane alignment="center" hgap="10" vgap="10">
-                    <Label text="%car-edit-title-label" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                    <Label text="%car-edit-title-label" style="-fx-font-weight: bold" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                        <font>
+                            <Font size="14.0"/>
+                        </font>
+                    </Label>
                 </GridPane>
             </left>
-            <padding>
-                <Insets left="12.5" right="5.0" top="12.0"/>
-            </padding>
             <BorderPane.margin>
-                <Insets left="12.5" right="5.0" top="12.0"/>
+                <Insets bottom="20"/>
             </BorderPane.margin>
         </BorderPane>
     </top>
@@ -91,13 +93,10 @@
             <TextField fx:id="parkingLotTextField" GridPane.columnIndex="1" GridPane.rowIndex="11"/>
             <Label text="%car-daily-rate-label" GridPane.columnIndex="2" GridPane.rowIndex="10"/>
             <TextField fx:id="dailyRateTextField" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
-            <padding>
-                <Insets top="25" right="25" bottom="25" left="25"/>
-            </padding>
         </GridPane>
     </center>
     <bottom>
-        <BorderPane prefHeight="25.0" prefWidth="1442.0" BorderPane.alignment="CENTER">
+        <BorderPane BorderPane.alignment="CENTER">
             <right>
                 <GridPane alignment="center" hgap="10" vgap="10">
                     <Button mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button-cancel-label"
@@ -106,12 +105,12 @@
                             textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
                 </GridPane>
             </right>
-            <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </padding>
             <BorderPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets top="20"/>
             </BorderPane.margin>
         </BorderPane>
     </bottom>
+    <padding>
+        <Insets top="25" right="25" bottom="25" left="25"/>
+    </padding>
 </BorderPane>
