--- a/src/main/resources/fxml/EmployeeTableView.fxml
+++ b/src/main/resources/fxml/EmployeeTableView.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.util.HashMap?>
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController"
-            onKeyPressed="#handleKeyEvent">
+<BorderPane onKeyPressed="#handleKeyEvent"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="de.htwsaar.prog3.carrental.controller.EmployeeTableViewController">
     <top>
         <GridPane BorderPane.alignment="CENTER">
             <columnConstraints>
