--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -2,9 +2,9 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
-<Pane xmlns:fx="http://javafx.com/fxml"
-      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController"
-      onKeyPressed="#handleKeyEvent">
+<Pane onKeyPressed="#handleKeyEvent"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController">
     <!-- TODO i18n -->
     <Pane prefHeight="60.0" prefWidth="540.0">
         <Label layoutX="30.0" layoutY="30.0" text="Car:"/>
